--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+singer-sdk = "0.1.0"
 target-stitch = "*"
 attrs = "*"
 
 [dev-packages]
+singer-tools = "*"
 
 [requires]
 python_version = "3.8"
